# xarm_quickstart

./: .gitignore  pyproject.toml
src/: asmagic.ipynb  droid_multi_camera_policy_client.py  xarm_sdk.ipynb
src/openpi_client/: main.py  remote_inference.ipynb
src/tools/cameras/: get_serial_number.py  multi_camera_stream.py  single_camera_stream.py  xarm_api.py
src/tools/spacemouse/: test_control_keyboard_xarm.py  test_control_xarm.py  test_phone_xarm.py  test_space_mouse.py
